Updating photos at caribe page

--- a/Caribe/caribe_v2/index.html
+++ b/Caribe/caribe_v2/index.html
@@ -69,8 +69,8 @@
     <section class="hero">
         <div class="background-image" style="background-image: url(img/hero2.jpg);"></div>
         <h1>Galería de Mármol</h1>
-        <h3>La cocina que <span class="underline--magical">sueñas</span> a tu alcance</h3>
-        <a href="https://api.whatsapp.com/send?phone=573226271906" class="btn"><i class="icon icon-btn fab fa-whatsapp fa fa-lg"></i>¡Escribenos!</a>
+        <h3>PURO LUJO - <span class="underline--magical">ELEGANTE</span> COMO TU!</h3>
+        <a href="https://api.whatsapp.com/send?phone=573226271906" class="btn"><i class="icon icon-btn fab fa-whatsapp fa fa-lg"></i>¡Just do it!</a>
     </section>
 
 
@@ -169,7 +169,7 @@
             </li>
             <li>
                 <h2>Ubicación</h2>
-                <iframe class="maps " src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d15667.026438608735!2d-74.8371581!3d10.981735!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xc3975d2085cd79f6!2sCaribeMarmol!5e0!3m2!1sen!2sco!4v1607639117199!5m2!1sen!2sco" style="border:0;"
+                <iframe class="maps" src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d15667.026438608735!2d-74.8371581!3d10.981735!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xc3975d2085cd79f6!2sCaribeMarmol!5e0!3m2!1sen!2sco!4v1607639117199!5m2!1sen!2sco" style="border:0;"
                     allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
             </li>
         </ul>
