--- a/Tailwind/index.html
+++ b/Tailwind/index.html
@@ -9,13 +9,39 @@
 </head>
 
 <body>
-    <button class="bg-green-200 hover:bg-red-700 text-white font-bold py-2 px-2">Fonziberto</button>
+    <!-- Header -->
+    <div class="bg-indigo-700 p-3 flex justify-between items-center">
+        <!-- Left Side -->
+        <div class="flex items-center">
+            <img class="mr-3" src="https://cdn2.iconfinder.com/data/icons/cat-power/64/cat_tied.png" alt="logo">
+            <a href="#" class="inline-block p-2 text-indigo-100 hover:text-indigo-400">Home</a>
+            <a href=" # " class="inline-block p-2 text-indigo-100 hover:text-indigo-400 ">About</a>
+        </div>
 
-    <div class="container mx-auto flex column-3">
-        <div class="m-5 p-5 pr-10 border rounded bg-blue-100">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt quae consequatur consequuntur iusto quam laborum nemo cum voluptatum ab vero?</p>
+        <!-- Right Side -->
+        <div>
+            <a href="# " class="inline-block p-2 text-indigo-100 hover:text-indigo-400 ">Login</a>
+            <a href="# " class="inline-block py-2 px-4 text-indigo-800 hover:text-indigo-900 hover:bg-indigo-300 bg-indigo-200 rounded transition ease-in duration:500 ">Sign Up</a>
         </div>
     </div>
+    <!-- Hero -->
+
+    <div class="md:flex justify-between py-20 px-10 bg-indigo-200 text-indigo-800 ">
+        <!--Left Side-->
+        <div class="md:w-1/2 mb-10 md:mb-0 justify-center items-center ">
+            <h2 class="sm:text-xl md:text-3xl lg:text-6xl mb-8 ">Fonzi's Journey!</h2>
+            <p class="mb-6 ">Stories to tell! Stories to live! Travel with Fonzi!</p>
+            <a href="# " class="inline-block py-3 px-6 text-lg mr-3 bg-gray-400 text-gray-800 hover:bg-gray-300 rounded ">Learn More</a>
+            <a href="# " class="inline-block py-3 px-6 text-lg bg-indigo-800 text-gray-200 hover:bg-indigo-700 rounded transition ease-in duration:500">Get your Backpack</a>
+        </div>
+        <!--Right Side-->
+        <div class="md:w-1/2 ">
+            <img alt="Fonzi partner " class="w-auto rounded shadow-2xl " src="https://images.unsplash.com/photo-1542652735873-fb2825bac6e2?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=334&q=80 ">
+        </div>
+    </div>
+    <!-- Features -->
+
+    <!-- Footer -->
 </body>
 
 </html>
