Services cards changed; responsive fix

--- a/Caribe/caribe_v3/index.html
+++ b/Caribe/caribe_v3/index.html
@@ -44,14 +44,14 @@
 		<div class="h-full flex flex-col justify-center items-center">
 			<p class="text-3xl sm:text-5xl md:text-7xl blue text-center" style="font-family: 'Cardo', serif;">Galeria de Mármol</p>
 			<p class="text-xl sm:text-4xl p-5 text-center font-medium">Materiales que revalorizan tus ambientes</p>
-		<a href="https://api.whatsapp.com/send?phone=573226271906" class="flex items-center border-b-2 border-yellow-400 hover:bg-yellow-400 p-2 md:text-2xl transition duration-500 ease-in">Escribenos<img src="https://img.icons8.com/doodle/48/000000/whatsapp.png" class="ml-2 inline w-8 h-8"/></a>
+			<a href="https://api.whatsapp.com/send?phone=573226271906" class="flex items-center border-b-2 border-yellow-400 hover:bg-yellow-400 p-2 md:text-2xl transition duration-500 ease-in">Escribenos<img src="https://img.icons8.com/doodle/48/000000/whatsapp.png" class="ml-2 inline w-8 h-8"/></a>
 		</div>
 	</div>
 </div>
-    <section class="flex h-1/2 flex-col items-center justify-center p-12" id="nosotros">
-        <h3 class="text-2xl md:text-4xl text-center m-8" style="font-family: 'Cardo', serif;">Somos una empresa dedicada a la transformación y comercialización de mármol, granitos naturales y exóticos.</h3>
-        <div class="flex flex-col md:flex-row justify-evenly items-center p-4">
-		<p class="text-center text-xl w-full md:w-1/2 text-gray-700 p-2 md:p-8"><span class="font-bold">La belleza, lujo, fuerza y versatilidad de lo natural.</span> Nuestra misión es ofrecer una amplia oferta y soluciones variadas en recubrimientos, a través de técnicas y tecnologías que resultan en productos innovadores, con altos estandares de calidad siempre cuidando de manera meticulosa los acabados finales en todos nuestros trabajos.</p>
+    <section class="flex h-1/2 flex-col items-center justify-center mt-6 p-6" id="nosotros">
+        <h3 class="text-2xl md:text-4xl -my-5 text-center m-8" style="font-family: 'Cardo', serif;">Somos una empresa dedicada a la transformación y comercialización de mármol, granitos naturales y exóticos.</h3>
+        <div class="flex flex-col lg:flex-row justify-evenly items-center p-4">
+		<p class="text-center text-xl w-full lg:w-1/2 text-gray-700 p-2 md:p-8"><span class="font-bold">La belleza, lujo, fuerza y versatilidad de lo natural.</span> Nuestra misión es ofrecer una amplia oferta y soluciones variadas en recubrimientos, a través de técnicas y tecnologías que resultan en productos innovadores, con altos estandares de calidad siempre cuidando de manera meticulosa los acabados finales en todos nuestros trabajos.</p>
 		<div class="flex justify-center"><img src="./img/caribe.png" alt="frente" class="w-full md:w-4/5 rounded shadow-2xl"></div>
 		</div>
 		<div class="flex justify-center pt-6">
@@ -119,43 +119,42 @@
             </div>
         </div>
 	</section>
-	<section class="bg-gray-700 p-8" id="servicios">
-		<h2 class="text-center text-5xl m-3 text-white style="font-family: 'Cardo', serif;">SERVICIOS</h2>
-		<div class="w-full text-white min-h-screen flex flex-wrap justify-evenly items-center gap-3 py-5">
+	<section class="bg-gray-200 p-8" id="servicios">
+		<div class="w-full flex flex-wrap justify-evenly items-center gap-3">
 			<div class="backdrop w-10/12 md:w-1/4 bg-white bg-opacity-10 rounded p-3 border border-gray-300 shadow-lg">
 			  <!-- header -->
+			  <img src="./img/slabs.jpg" alt="slabs" class="rounded p-4">
 			  <div class="w-full mb-3 pb-3 border-b border-1 border-white">
 				<h3 class="text-xl font-semibold text-shadow text-center">Fabricación e instalación</h3>
 			  </div>
 			  <!-- body -->
 			  <div>
-				<img src="./img/slabs.jpg" alt="image1" class="w-full h-48 object-cover mb-2">
 				<p class="mb-3 tracking-wide text-base text-shadow text-center">
 					Realizamos tu obra en todas sus fases, incluyendo la toma de medida en el sitio, corte y transformación de la piedra de tu preferencia, transporte e instalación; tambien contamos con lavaplatos de la exclusiva marca Tramontina para la venta. Todo lo que necesitas en un solo lugar.
 				</p>
 			  </div>
 			</div>
-			<div class="backdrop w-10/12 md:w-1/4 bg-white bg-opacity-10 rounded p-3 text-white border border-white shadow-lg">
+			<div class="backdrop w-10/12 md:w-1/4 bg-white bg-opacity-10 rounded p-3 border border-white shadow-lg">
 			  <!-- header -->
+			  <img src="./img/hogar.jpg" alt="hogar" class="rounded p-4">
 			  <div class="w-full mb-3 pb-3 border-b border-1 border-white">
 				<h3 class="text-xl font-semibold text-shadow text-center">Especialistas en el sector hogar</h3>
 			  </div>
 			  <!-- body -->
 			  <div>
-				<img src="./img/hogar.jpg" alt="image2" class="w-full h-48 object-cover mb-2">
 				<p class="mb-3 tracking-wide text-base text-shadow text-center">
 					Sabemos que los espacios de cada hogar reflejan nuestra identidad por lo nuestro enfoque para los proyectos del sector residencial prioriza la personalización de cada cliente, tomando como criterios principales el diseño, innovación y la transformación de los espacios acordes con las necesidades de las personas.
 				</p>
 			  </div>
 			</div>
-			<div class="backdrop w-10/12 md:w-1/4 bg-white bg-opacity-10 rounded p-3 text-white border border-white shadow-lg">
+			<div class="backdrop w-10/12 md:w-1/4 bg-white bg-opacity-10 rounded p-3 border border-white shadow-lg">
 			  <!-- header -->
+			  <img src="./img/asesoria.jpg" alt="asesoria" class="rounded p-4">
 			  <div class="w-full mb-3 pb-3 border-b border-1 border-white">
 				<h3 class="text-xl font-semibold text-shadow text-center">Asesoría personalizada</h3>
 			  </div>
 			  <!-- body -->
 			  <div>
-				<img src="./img/asesoria.jpg" alt="image3" class="w-full h-48 object-cover mb-2">
 				<p class="mb-3 tracking-wide text-base text-shadow text-center">
 					Contara con asesoría especializada para definir cuáles son los mejores materiales para su proyecto junto con acompañamiento en cada una de las etapas del proyecto, nuestro personal calificado le ofrece un servicio de calidad buscando siempre la satisfacción plena de nuestros clientes.
 				</p>
