--- a/Caribe/caribe_v3/index.html
+++ b/Caribe/caribe_v3/index.html
@@ -17,9 +17,50 @@
 	<link href="https://fonts.googleapis.com/css2?family=Cardo:wght@700&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="./css/styles.css">
 	<script src="https://cdn.jsdelivr.net/gh/alpinejs/alpine@v2.x.x/dist/alpine.min.js" defer></script>
+<!-- Facebook Pixel Code -->
+<script>
+	!function(f,b,e,v,n,t,s)
+	{if(f.fbq)return;n=f.fbq=function(){n.callMethod?
+	n.callMethod.apply(n,arguments):n.queue.push(arguments)};
+	if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0';
+	n.queue=[];t=b.createElement(e);t.async=!0;
+	t.src=v;s=b.getElementsByTagName(e)[0];
+	s.parentNode.insertBefore(t,s)}(window, document,'script',
+	'https://connect.facebook.net/en_US/fbevents.js');
+	fbq('init', '1219852961769113');
+	fbq('track', 'PageView');
+	</script>
+	<noscript><img height="1" width="1" style="display:none"
+	src="https://www.facebook.com/tr?id=1219852961769113&ev=PageView&noscript=1"
+	/></noscript>
+	<!-- End Facebook Pixel Code -->
 </head>
 <body>
-		<div class="w-full h-screen" style="background-image: url(./img/hero_crema.jpeg);">
+	<!-- Messenger plugin de chat Code -->
+    <div id="fb-root"></div>
+    <!-- Your plugin de chat code -->
+    <div id="fb-customer-chat" class="fb-customerchat">
+    </div>
+    <script>
+      var chatbox = document.getElementById('fb-customer-chat');
+      chatbox.setAttribute("page_id", "106858067485333");
+      chatbox.setAttribute("attribution", "page_inbox");
+      window.fbAsyncInit = function() {
+        FB.init({
+          xfbml            : true,
+          version          : 'v11.0'
+        });
+      };
+
+      (function(d, s, id) {
+        var js, fjs = d.getElementsByTagName(s)[0];
+        if (d.getElementById(id)) return;
+        js = d.createElement(s); js.id = id;
+        js.src = 'https://connect.facebook.net/es_LA/sdk/xfbml.customerchat.js';
+        fjs.parentNode.insertBefore(js, fjs);
+      }(document, 'script', 'facebook-jssdk'));
+    </script>
+		<div class="w-full h-4/5" style="background-image: url(./img/hero_crema.jpeg);">
 			<div>
 				<div class="w-full text-gray-700 bg-white">
 				  <div x-data="{ open: true }" class="flex flex-col max-w-screen-xl px-4 mx-auto md:items-center md:justify-between md:flex-row md:px-6 lg:px-8">
@@ -41,18 +82,19 @@
 				  </div>
 				</div>
 				</div>
-		<div class="h-full flex flex-col justify-center items-center">
+		<div class="h-full flex flex-col justify-center items-center p-24">
 			<p class="text-3xl sm:text-5xl md:text-7xl blue text-center" style="font-family: 'Cardo', serif;">Galeria de Mármol</p>
-			<p class="text-xl sm:text-4xl p-5 text-center font-medium">Materiales que revalorizan tus ambientes</p>
-			<a href="https://api.whatsapp.com/send?phone=573226271906" class="flex items-center border-b-2 border-yellow-400 hover:bg-yellow-400 p-2 md:text-2xl transition duration-500 ease-in">Escribenos<img src="https://img.icons8.com/doodle/48/000000/whatsapp.png" class="ml-2 inline w-8 h-8"/></a>
+			<p class="text-xl sm:text-4xl p-2 text-center font-medium">PURO LUJO - ELEGANTE TOTAL</p>
+			<p class="text-xl sm:text-4xl pb-6 text-center font-medium">Como tú</p>
+			<a href="https://api.whatsapp.com/send?phone=573226271906" class="flex items-center border-b-2 border-yellow-400 hover:bg-yellow-400 p-2 md:text-2xl transition duration-500 ease-in">Escribe YA!<img src="https://img.icons8.com/doodle/48/000000/whatsapp.png" class="ml-2 inline w-8 h-8"/></a>
 		</div>
 	</div>
 </div>
     <section class="flex h-1/2 flex-col items-center justify-center mt-6 p-6" id="nosotros">
-        <h3 class="text-2xl md:text-4xl -my-5 text-center m-8" style="font-family: 'Cardo', serif;">Somos una empresa dedicada a la transformación y comercialización de mármol, granitos naturales y exóticos.</h3>
+        <h3 class="text-2xl md:text-4xl -my-5 text-center m-8" style="font-family: 'Cardo', serif;">Empresa dedicada a la transformación y comercialización de mármol, granitos, cuarzos y materiales exóticos.</h3>
         <div class="flex flex-col lg:flex-row justify-evenly items-center p-4">
-		<p class="text-center text-xl w-full lg:w-1/2 text-gray-700 p-2 md:p-8"><span class="font-bold">La belleza, lujo, fuerza y versatilidad de lo natural.</span> Nuestra misión es ofrecer una amplia oferta y soluciones variadas en recubrimientos, a través de técnicas y tecnologías que resultan en productos innovadores, con altos estandares de calidad siempre cuidando de manera meticulosa los acabados finales en todos nuestros trabajos.</p>
-		<div class="flex justify-center"><img src="./img/caribe.png" alt="frente" class="w-full md:w-4/5 rounded shadow-2xl"></div>
+		<p class="text-center text-xl w-full lg:w-1/2 text-gray-700 p-2 md:p-8"><span class="font-bold">La belleza, lujo, fuerza y versatilidad de lo natural.</span> Nuestra misión es ofrecer una amplia oferta y soluciones variadas en revestimientos, a través de técnicas y tecnologías que brindan resultados innovadores, con altos estandares de calidad siempre cuidando de manera meticulosa los acabados finales en todos nuestros trabajos.</p>
+		<div class="flex justify-center"><img src="./img/caribe.png" alt="frente" class="w-full md:w-4/5 rounded shadow-2xl mt-8"></div>
 		</div>
 		<div class="flex justify-center pt-6">
 		<p class="text-center w-full md:w-1/2 text-xl text-gray-700 m-3">Ya seas una constructora, arquitecto o un entusiasta que quiere utilizar los mejores materiales para reformar sus espacios, te brindamos piedras naturales como principal elemento para concretar tus ideas.</p>
@@ -67,7 +109,7 @@
 			<img src="./img/landscape.jpeg" alt="landscape" class="mx-auto">
 		</div>
 	<section class="p-8 flex flex-col items-center justify-between">
-		<h1 class="p-6 text-5xl text-center" style="font-family: 'Cardo', serif;">CATALOGO</h1>
+		<h1 class="p-6 text-5xl text-center" style="font-family: 'Cardo', serif;">CATÁLOGO</h1>
         <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-4 p-6" id="catalogo">
             <div>
                 <img class="hover:opacity-80 shadow-xl" src="img/1_ICARAI.jpg" alt="amarillo_icarai" />
@@ -175,7 +217,7 @@
 			</div>
 			</div>
             <div class="w-full md:w-1/2">
-                <iframe class="h-96 w-full p-8" src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d15667.026438608735!2d-74.8371581!3d10.981735!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xc3975d2085cd79f6!2sCaribeMarmol!5e0!3m2!1sen!2sco!4v1607639117199!5m2!1sen!2sco"
+                <iframe title="location from google maps" class="h-96 w-full p-8" src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d15667.026438608735!2d-74.8371581!3d10.981735!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xc3975d2085cd79f6!2sCaribeMarmol!5e0!3m2!1sen!2sco!4v1607639117199!5m2!1sen!2sco"
                     allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
 			</div>
 		</div>
@@ -187,7 +229,7 @@
 				<li><a href="https://www.facebook.com/caribemarmolcol" target="_blank"><img src="https://img.icons8.com/office/36/000000/facebook-new.png"/></a></li>
 				<li><a href="https://www.instagram.com/caribemarmolcol/" target="_blank"><img src="https://img.icons8.com/office/36/000000/instagram-new.png"/></a></li>
 			</ul>
-			<p class="text-center text-gray-400 pt-2 border-t-2 border-gray-600 w-full md:w-1/2">Copyright reservados CaribeMarmol - Diseñado por @dlscoccia <a href="https://twitter.com/dlscoccia"><img src="https://img.icons8.com/fluent/24/000000/twitter.png" class="inline"/></a></p>
+			<p class="text-center text-gray-400 pt-2 border-t-2 border-gray-600 w-full md:w-1/2">Copyright reservados CaribeMarmol © - Diseñado por @dlscoccia <a href="https://twitter.com/dlscoccia"><img src="https://img.icons8.com/fluent/24/000000/twitter.png" class="inline"/></a></p>
 		</footer>
 	<script>
 		//Javascript to toggle the menu
@@ -195,5 +237,8 @@
 			document.getElementById("nav-content").classList.toggle("hidden");
 		}
 	</script>
+	  <script>
+		fbq('track', 'PageView');
+	  </script>
 </body>
 </html>
