Fixing typos, improving responsive for projects section

--- a/Tailwind/Portfolio/index.html
+++ b/Tailwind/Portfolio/index.html
@@ -233,7 +233,7 @@
                     <h3 class="primary text-gold text-center text-3xl font-bold">JessFood Madrid</h3>
                     <p class="secundary text-center text-blue font-bold py-4 text-xl border-b-2 border-gray-300 hidden sm:block">
                         Diseño y Desarrollo de página
-                        web para emprendiento gastronómico, utlizando TailwindCSS.</p>
+                        web para emprendimiento gastronómico, utilizando TailwindCSS.</p>
                     <div class="text-gold pt-4">
                         <h4 class="text-3xl primary text-blue font-bold">Stack</h4>
                         <div class="stack-icons flex justify-evenly mt-4">
@@ -284,7 +284,7 @@
                     <h3 class="primary text-gold text-center text-3xl font-bold">50 días de Retos</h3>
                     <p class="secundary text-center text-blue font-bold py-4 text-xl border-b-2 border-gray-300 hidden sm:block">50
                         Retos propuestos durante el
-                        bootcamp Programate para aprender y reforzar hablidades como Front End</p>
+                        bootcamp Prográmate para aprender y reforzar habilidades como Front End</p>
                     <div class="text-gold pt-4">
                         <h4 class="text-3xl primary text-blue font-bold">Stack</h4>
                         <div class="stack-icons flex justify-evenly mt-4">
@@ -308,7 +308,7 @@
     <section class="bg-light h-screen bg-gray-700 p-10" id="articles">
         <h2
             class="heading-dark w-max text-4xl border-b-2 border-gray-900 mx-auto text-blue text-center mb-8">
-            ULTIMOS ARTICULOS</h2>
+            ÚLTIMOS ARTÍCULOS</h2>
         <div class="book secundary perspective text-white bg-yellow-300 w-11/12 h-4/5 flex justify-end mx-auto">
             <div class="page absolute duration-1000 flex items-end origin-left w-1/2 transition transform h-full"
                 data-page="2" onclick="togglePageFlip(this)">
